--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "js",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --mode production",
+    "serve": "webpack-dev-server --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "js"
   ],
   "author": "Yura Bishko <yurik322412@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "html-webpack-plugin": "^4.3.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
